--- a/app/src/main/res/layout/item_forecast.xml
+++ b/app/src/main/res/layout/item_forecast.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="@dimen/padding_item_list"
     android:orientation="vertical">
 
     <TextView
