--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding_item_list">4dp</dimen>
+    <dimen name="loading_progress_edit_text_size">30dp</dimen>
 </resources>
