--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
         app:layout_constraintTop_toBottomOf="@+id/edtSearch"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/btn_get_weather"
+        android:textColor="@color/button_text_default_color"
+        android:backgroundTint="@color/button_default_color"
         android:textAllCaps="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
