--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,13 @@
         android:textColor="@color/button_text_default_color"
         android:backgroundTint="@color/button_default_color"
         android:textAllCaps="false"
+        android:contentDescription="@string/btn_get_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvForecast"
+        android:importantForAccessibility="no"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/btnSearch"
